--- a/src/radio/radio.less
+++ b/src/radio/radio.less
@@ -13,7 +13,7 @@
     .box-sizing(border-box);
 
     & > span {
-        line-height: 1px;
+        line-height: @diameter;
 
         &:first-of-type {
             padding-left: 0.4em;
@@ -28,6 +28,7 @@
         overflow: hidden;
         background-color: @background-color;
         border: @border-size solid @border-color;
+        .flex(0 0 @diameter);
         .border-radius(@diameter);
         .background-clip(padding-box);
         .box-sizing(content-box);
